Add functionality for dark mode Changes to be committed: 	new file:   assets/white_logo_png.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <img src='assets/black_logo_png.png' />
+        <picture>
+            <source srcset='assets/black_logo_png.png' media='(prefers-color-scheme: dark)'>
+            <img src='assets/white_logo_png.png'>
     </body>
 </html>
