Files for hosting our Zumba app

--- a/statistics.html
+++ b/statistics.html
@@ -31,7 +31,8 @@
         <img src="images/user-circle-solid-24.png" class="header-menu-icon" onclick="menutoggle()">
     </header>
     <hr>
-<!----- index-1 ----->
+<!----- statistics-1 ----->
+
 <!----- footer ----->
     <hr>
     <footer>
